# advent-of-code

./: LICENSE
2018/day-1/: Day_1_1.hi  Day_1_1.hs  Day_1_1.out  Day_1_2.hi  Day_1_2.hs  Day_1_2.out  Day_1_2_v2.out  bollash.cpp  bollash.out  bollash1.out  main.cpp  main.out
2018/day-16/: Day16.hs
2018/day-18/: Day18.hi  Day18.hs  Day18_1.out  Day18_2.out  Makefile  output.txt
2018/day-2/: Day2.hi  Day2.hs  Day2.out  tibi.cpp  tibi.out
2018/day-3/: Day3  Day3.hi  Day3.hs  Day3_2  Day3_2.hi  Day3_2.hs
2018/day-4/: Day4  Day4.hi  Day4.hs  tibi-Day4  tibi-Day4.hi  tibi-Day4.hs
2018/day-5/: Day5_1  Day5_1.hi  Day5_1.hs
2018/day-6/: Day6  Day6.hs  Day6_2  Day6_2.hi  Day6_2.hs  day6.hi
2018/day-7/: Day7.hs
2018/day-8/: Day8.hs
2019/day-1/day1/: Cargo.toml
2019/day-10/day10/: Cargo.toml
2019/day-11/day-11/: Cargo.toml
2019/day-2/day2/: Cargo.toml
2019/day-2/day2cs/: IntCodeCPU.cs  Program.cs  Tests.cs  day2cs.csproj
2019/day-3/day3/: Cargo.toml
2020/Monorepo2020/: Monorepo2020.sln
2020/template-cs/: Program.cs  Tests.cs
2022/aoc2022rust/: Cargo.toml
2022/aoc2022rust/benches/: my_benchmark.rs
2022/aoc2022rust/src/: main.rs  utils.rs
2022/aoc2022rust/src/days/: day1.rs  day2.rs  day25.rs  day3.rs  day4.rs  day5.rs  mod.rs
2023/aoc2023rust/: Cargo.toml
2023/aoc2023rust/benches/: my_benchmark.rs
2023/aoc2023rust/src/: main.rs
2023/aoc2023rust/src/days/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day6.rs  mod.rs
2024/aoc2024scala/: .editorconfig  .gitignore  .scalafmt.conf  build.sbt
2025/aoc2025rust/: Cargo.toml
(+133 files in other folders)
