[package]
name = "aoc2023rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recap = "0.1"
serde = "1.0"
regex = "1"
clap = { version = "4.4.11", features = ["derive"] }
once_cell = "1.19.0"
petgraph = "0.6.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
